fix: clickable area of option's checkbox & scrollbar issue while printing

--- a/web/src/scaffold.css
+++ b/web/src/scaffold.css
@@ -448,6 +448,19 @@ body {
   span.is-viewed {
     color: unset;
   }
+
+  /**
+   * lock page style while printing
+   * ref: https://stackoverflow.com/questions/57886550/hide-vertical-scrollbar-in-chrome-while-printing
+   */
+  /* @page {
+    size: A4 portrait;
+    margin:1cm;
+  } */
+
+  ::-webkit-scrollbar {
+      display: none;
+  }
 }
 
 textarea {
